// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer FormFooter should render form footer 1`] = `
<DocumentFragment>
  <div />
  .c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c0 svg {
  width: 16px;
  height: 16px;
}

.c0 svg:before {
  content: 'a';
}

.c0 svg path {
  color: var(--acx-primary-black);
}

.c0.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c0.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c0.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c0[disabled] svg path,
.c0.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c0[disabled].ant-btn-link svg path,
.c0.ant-btn-disabled.ant-btn-link svg path,
.c0[disabled].ant-btn-default svg path,
.c0.ant-btn-disabled.ant-btn-default svg path,
.c0[disabled].ant-btn-primary svg path,
.c0.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

<div>
    <button
      class="ant-btn ant-btn-default c0"
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
    <button
      class="ant-btn ant-btn-primary c0"
      type="button"
    >
      <span>
        Save
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Drawer should match snapshot for StepsForm style drawer 1`] = `
Array [
  .c0 {
  border: none;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: var(--acx-headline-5-font-size);
  line-height: var(--acx-headline-5-line-height);
  padding: 0;
  padding-bottom: 8px;
}

.c0:hover {
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 12px;
}

.c2 {
  font-size: var(--acx-headline-5-font-size);
  line-height: var(--acx-headline-5-line-height);
  padding-top: 8px;
  color: var(--acx-neutrals-60);
  font-weight: var(--acx-headline-5-font-weight);
}

<div
    aria-modal="true"
    class="ant-drawer-content"
    role="dialog"
  >
    <div
      class="ant-drawer-wrapper-body"
    >
      <div
        class="ant-drawer-header"
      >
        <div
          class="ant-drawer-header-title"
        >
          <button
            aria-label="Close"
            class="ant-drawer-close"
            type="button"
          >
            <svg
              data-testid="CloseSymbol"
            />
          </button>
          <div
            class="ant-drawer-title"
          >
            <button
              class="c0"
            >
              <svg
                data-testid="ArrowBack"
              />
              Back
            </button>
            <div
              class="c1"
            >
              <svg
                data-testid="BulbOutlined"
              />
              Test Drawer
            </div>
            <div
              class="c2"
            >
              Test Drawer Subtitle
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-drawer-body"
      >
        <p>
          some content
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Drawer should match snapshot for basic drawer 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 12px;
}

<div
    aria-modal="true"
    class="ant-drawer-content"
    role="dialog"
  >
    <div
      class="ant-drawer-wrapper-body"
    >
      <div
        class="ant-drawer-header"
      >
        <div
          class="ant-drawer-header-title"
        >
          <button
            aria-label="Close"
            class="ant-drawer-close"
            type="button"
          >
            <svg
              data-testid="CloseSymbol"
            />
          </button>
          <div
            class="ant-drawer-title"
          >
            <div
              class="c0"
            >
              Test Drawer
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-drawer-body"
      >
        <p>
          some content
        </p>
      </div>
    </div>
  </div>,
]
`;

exports[`Drawer should match snapshot for custom drawer 1`] = `
Array [
  .c0 {
  border: none;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: var(--acx-headline-5-font-size);
  line-height: var(--acx-headline-5-line-height);
  padding: 0;
  padding-bottom: 8px;
}

.c0:hover {
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 12px;
}

.c2 {
  font-size: var(--acx-headline-5-font-size);
  line-height: var(--acx-headline-5-line-height);
  padding-top: 8px;
  color: var(--acx-neutrals-60);
  font-weight: var(--acx-headline-5-font-weight);
}

<div
    aria-modal="true"
    class="ant-drawer-content"
    role="dialog"
  >
    <div
      class="ant-drawer-wrapper-body"
    >
      <div
        class="ant-drawer-header"
      >
        <div
          class="ant-drawer-header-title"
        >
          <button
            aria-label="Close"
            class="ant-drawer-close"
            type="button"
          >
            <svg
              data-testid="CloseSymbol"
            />
          </button>
          <div
            class="ant-drawer-title"
          >
            <button
              class="c0"
            >
              <svg
                data-testid="ArrowBack"
              />
              Back
            </button>
            <div
              class="c1"
            >
              <svg
                data-testid="BulbOutlined"
              />
              Test Drawer
            </div>
            <div
              class="c2"
            >
              Test Drawer Subtitle
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-drawer-body"
      >
        <p>
          some content
        </p>
      </div>
    </div>
  </div>,
]
`;
